--- a/squeezelite/Dockerfile
+++ b/squeezelite/Dockerfile
@@ -20,7 +20,7 @@ RUN apt-get update && apt-get upgrade -y -o Dpkg::Options::="--force-confold"
 # Install Squeezelite
 RUN apt-get -qq -y update && \
     apt-get -qq -y install alsa-base alsa-utils libasound2-data libasound2-dev libasound2-plugins libasound2 curl && \
-	curl -o squeezelite.tar.gz -L https://sourceforge.net/projects/lmsclients/files/squeezelite/linux/squeezelite-1.9.7.1270-x86_64.tar.gz/download && \
+	curl -o squeezelite.tar.gz -L https://sourceforge.net/projects/lmsclients/files/squeezelite/linux/squeezelite-1.9.7.1278-armv6hf.tar.gz/download && \
 	tar -xvzf squeezelite.tar.gz && \
     mv squeezelite /usr/bin && \
     chmod +x /usr/bin/squeezelite && \
